Revert "background height jump fix 2"
This reverts commit 37445868d89648c0dc7ef720adc5bf0441bd3ad1.

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ nav a:focus {
     background-color: rgb(188, 188, 188);
     height: 100vh;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
     background-image: url(../images/main-page-bg.jpg);
     background-position: center;
@@ -270,7 +270,7 @@ nav a:focus {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-blend-mode: multiply;
-    background-size: auto 100vh;
+    transition: height 1s ease;
     /* box-shadow: 0px 0px 8px var(--clr-primary); */
 }
 
